# End-to-End-Farm-detection

./: .gitignore  Dockerfile  README.md  app.py  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml  cicd.yaml
config/: model1.yaml
model/: gaussiannb.joblib  preprocessor.joblib
notebooks/: EDA, Processing and Modeling.ipynb  notebookfb38bb40cc.ipynb
src/farm_detection/: __init__.py  preprocess.py
src/farm_detection/data/: preprocess.py
src/farm_detection/models/: model.py  predict.py  training.py
tests/: test_predict.py  test_preprocessor.py
