[project]
name = "farm-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hotarouuu", email = "lucashondo01@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.9.0",
    "pycaret>=3.3.2",
    "seaborn>=0.13.2",
]

[project.scripts]
farm-detection = "farm_detection:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
