[project]
name = "farm-detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "fastapi>=0.128.5",
    "mlflow>=3.9.0",
    "pycaret>=3.3.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
farm-detection = "farm_detection:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv_build]
package-dir = {"" = "src"}

